default image added

--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,13 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.product.row img {
+  width: 300px;
+}
