--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,7 @@ form div {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
 }
 
 .product.row {
@@ -39,6 +40,10 @@ form div {
   width: 400px;
 }
 
+.topnav {
+  overflow: hidden;
+}
+
 .topnav a {
   text-decoration: none;
 }
@@ -48,3 +53,10 @@ form div {
   color: black
 }
 
+.lefttopnav {
+  float: left;
+}
+
+.righttopnav {
+  float: right;
+}
