--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,5 @@
 body {
   font-family: sans-serif;
-
 }
 
 a {
@@ -74,8 +73,6 @@ height: 64px;
   margin-right: 20px
 }
 
-
-
 .righttopnav a{
   margin-top:20px;
   font-size:20px;
@@ -96,4 +93,15 @@ height: 64px;
 
 .authform {
   background-color: rgb(248, 245, 245);
+}
+
+.settingsDiv,
+.muiBoxSettings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.muiBoxSettings .MuiPaper-root {
+  margin: 10px;
 }
