--- a/public/style.css
+++ b/public/style.css
@@ -106,6 +106,34 @@ height: 64px;
   margin: 10px;
 }
 
-single-product.img {
+.product-details {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+}
 
+.single-product {
+  background-color:rgb(248, 245, 245);
+  margin: 20px;
+  padding: 30px;
+
+}
+
+.single-image {
+  border: 1px solid rgba(225, 220, 220, 0.5);
+  height: 400px;
+  width: 500px;
+}
+
+.single-add-cart {
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  color: rgb(54, 104, 241);
+  background-color: white;
+  border: none;
+}
+
+.single-add-cart:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
