--- a/public/style.css
+++ b/public/style.css
@@ -137,3 +137,10 @@ height: 64px;
 .single-add-cart:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+.cartImage {
+  height: 150px;
+  width: 175px;
+  float: left;
+  margin-right: 20px;
+}
