Guest cart now has working quantity editing functionality for local storage and updates state

--- a/public/style.css
+++ b/public/style.css
@@ -144,3 +144,8 @@ height: 64px;
   float: left;
   margin-right: 20px;
 }
+
+.guestCartHolder {
+  background-color:rgb(248, 245, 245);
+  padding-top: 15px;
+}
